syntax = "proto3";

package zorro;
option go_package = "github.com/Acedyn/zorro-core/internal/tools";

import "internal/tools/tool.proto";
import "internal/tools/command.proto";

// An action can be composed of different types of tools
// They are linked together via the upstream key
message ActionChild {
  // The child can be of different types of tools
  oneof child {
    zorro.Command command = 1;
    zorro.Action action = 2;
  }
  // Defines the dependency of this action child
  optional string upstream = 3;
}

// An action holds groups of subactions and commands.
// It allows to chain and organize multiple commands into a dependency graph
message Action {
  // All tools are composed of this field that contains required infos
  zorro.ToolBase base = 1;
  // The children form like a sub graph
  map<string, zorro.ActionChild> children = 2;
}
